# elia-hackaton

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  rmse_results.txt  tfo_parameters.csv
elia_hackaton/: PINN_model_save.py  apollo.py  config.py  dashboard.py  main.py  temperature_model.py
elia_hackaton/apps/: __init__.py  app.py
elia_hackaton/core/: __init__.py  app.py  dashboard.py  extract_data.py  main.py  physics.py  plot.py  plot_things.ipynb  utils.py
elia_hackaton/data/: Equipment.csv  best_model_{equipment_name}.pth  tfo_parameters.csv
elia_hackaton/data/all_time_series/: 24917.csv  33291.csv  50033827.csv  5004597.csv  5004625.csv  5017843.csv  5017873.csv  50249457.csv  50250035.csv  5025312.csv  5026188.csv  5027447.csv  50277055.csv  50282127.csv  5030256.csv  76075.csv  76632.csv
elia_hackaton/data/best_models/: best_model_24917.pth  best_model_33291.pth  best_model_50033827.pth  best_model_5004597.pth  best_model_5004625.pth  best_model_5017843.pth  best_model_5017873.pth  best_model_50249457.pth  best_model_50250035.pth  best_model_5025312.pth  best_model_5026188.pth  best_model_5027447.pth  best_model_50277055.pth  best_model_50282127.pth  best_model_5030256.pth  best_model_76075.pth  best_model_76632.pth
elia_hackaton/data/hotspot_temperature/: 24917.csv  33291.csv  50033827.csv  5004597.csv  5004625.csv  5017843.csv  5017873.csv  50249457.csv  50250035.csv  5025312.csv  5026188.csv  5027447.csv  50277055.csv  50282127.csv  5030256.csv  76075.csv  76632.csv
elia_hackaton/data/load/: 24917.csv  33291.csv  50033827.csv  5004597.csv  5004625.csv  5017843.csv  5017873.csv  50249457.csv  50250035.csv  5025312.csv  5026188.csv  5027447.csv  50277055.csv  50282127.csv  5030256.csv  (+2 more)
elia_hackaton/eda/: data_cleaning.ipynb  dl_and_struct_OLD.ipynb  download_and_structure_data.ipynb  eda2.ipynb  split_tfo_purposes.ipynb
elia_hackaton/models/: classes.py  feature_engineering.py  models.py  prometheus_script.py  run_model.py  substation_management.py  to_del.py
elia_hackaton/scripts/: get_data.py  get_peaks_and_surface.ipynb  run_model.py  substation_management.py  temperature_model.py  train_and_predict.py  train_model.py
elia_hackaton/to_del/: prometheus_script.py
(+60 files in other folders)
