[tool.poetry]
name = "elia-hackaton"
version = "0.1.0"
description = "Solution for the elia-hackaton 2025 challenge"
authors = [
    "Marco Di Gennaro <marco.digennaro@dtsc.be>",
    "Melih Taki <melih.taki@dtsc.be>",
]

[tool.poetry.dependencies]
python = "^3.8"
# Add other dependencies here

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
