[tool.poetry]
name = "elia-hackaton"
version = "0.1.0"
description = "Solution for the elia-hackaton 2025 challenge by DTSC-BRAIN"
authors = [
    "Marco Di Gennaro <marco.digennaro@dtsc.be>",
    "Melih Taki <melih.taki@dtsc.be>",
    "Adrien Dewalque <adrien.dewalque@dtsc.be>",
    "Samuel Aulotte <samuel.aulotte@dtsc.be>",
    "Shreya Bhattacharaya <shreya.bhattacharaya@dtsc.be>",
    "Mike Dauphinais <mike.dauphinais@dtsc.be>",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.4"
torch = "^2.6.0"
requests = "^2.32.3"
scipy = "^1.15.2"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
streamlit = "^1.43.2"
pandas = "^2.2.3"
altair = "^5.5.0"
plotly = "^6.0.1"
pydeck = "^0.9.1"
jupyter = "^1.1.1"
scikit-learn = "^1.6.1"
pep8 = "^1.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
pytest-cov = "^2.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
